# innovathon-mcp-poc

./: .env-example  .gitignore  LICENSE  README.md  ReadME.md  app.py  database.db  main.py  mcp_chat_client.py  mcp_client.py  mcp_server.py  pyproject.toml  requirements.txt  simple_mcp_chat_client.py  simple_mcp_chat_client_with_env.py  streamlit.py  test_chat_client.py  test_plugin_architecture.py  test_refactored_agents.py  uv-add.txt
agents/: __init__.py  sql_agent.py
agents/time_functions/: __init__.py  plugin.py
core/: __init__.py  agent_plugin.py  config.py  plugin_manager.py  plugin_registry.py  server_factory.py  tool_handler.py  tool_schema.py
docs/: cli_usage_documentation.md  simplified_client_documentation.md
mcp_implementation/: implementation_guide.md  implementation_plan.md
mcp_implementation/innovathon-mcp-poc/: main.py
mcp_implementation/innovathon-mcp-poc/agents/: __init__.py  time_agent.py
mcp_implementation/innovathon-mcp-poc/core/: agent_interface.py  registry.py
mcp_openai/: README.md  test_db_setup.py  test_integration.py  test_orchestrator.py  test_sqlite_agent.py  test_time_agent.py  todo.md
mcp_openai/cli/: cli.py
mcp_openai/docs/: implementation_approach.md  implementation_plan.md  implementation_summary.md  setup_instructions.md  system_architecture.md  test_plan.md
mcp_openai/orchestrator/: llm_client.py  mcp_client.py  orchestrator.py  requirements.txt
mcp_openai/sqlite_agent/: db_utils.py  requirements.txt  server.py
mcp_openai/time_agent/: server.py
utils/: __init__.py  retry.py  security.py
(+5 files in other folders)
